# custom-messenger-client

./: API.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CUSTOM MESSENGER.md  DATABASE.md  DEPLOYMENT.md  MIGRATION_REPORT.md  VERIFICATION_REPORT.md
.github/workflows/: build.yml  karagram-win.yml
Telegram/: CMakeLists.txt
Telegram/SourceFiles/custom_network/: CMakeLists.txt  api_facade.cpp  api_facade.h  auth_module.cpp  auth_module.h  custom_api.cpp  custom_api.h  custom_auth.cpp  custom_auth.h  custom_session.cpp  custom_session.h  data_adapter.cpp  data_adapter.h  file_transfer.cpp  file_transfer.h  karagram_backend.cpp  karagram_backend.h  mtp_override.cpp  mtp_override.h  notification_handler.cpp  notification_handler.h  rest_client.cpp  rest_client.h  rest_data_loader.cpp  rest_data_loader.h  rest_file_transfer.cpp  rest_file_transfer.h  rest_notification_handler.cpp  rest_notification_handler.h  session_manager.cpp  session_manager.h  websocket_client.cpp  websocket_client.h
Telegram/SourceFiles/intro/: intro_email_login.cpp  intro_email_login.h  intro_email_register.cpp  intro_email_register.h  intro_start.cpp  intro_widget.cpp
Telegram/SourceFiles/mtproto/: connection_abstract.cpp  connection_rest.cpp  connection_rest.h  mtp_instance.cpp
Telegram/cmake/: telegram_options.cmake
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/api/: chats.py  files.py  members.py  users.py  (+3 more)
(+17 files in other folders)
